// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonViewer Expand - Collapse button expand when click button 1`] = `
<div
  style="position: relative;"
>
  <div
    class="react-json-view"
    style="font-family: monospace; cursor: default; background-color: rgb(237, 237, 237); position: relative; padding: 20px 10px; font-size: 12px; overflow: visible; white-space: pre-wrap; word-break: break-all;"
  >
    <div
      class="pretty-json-container object-container"
    >
      <div
        class="object-content"
      >
        <div
          class="object-key-val"
        >
          <span>
            <span
              style="display: inline-block; cursor: pointer;"
            >
              <div
                class="icon-container"
                style="display: inline-block; width: 17px;"
              >
                <span
                  class="expanded-icon"
                >
                  <svg
                    fill="currentColor"
                    style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                    viewBox="0 0 15 15"
                  >
                    <path
                      d="M0 5l6 6 6-6z"
                    />
                  </svg>
                </span>
              </div>
              <span />
              <span
                style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
              >
                {
              </span>
            </span>
            <div
              class="object-meta-data"
              style="display: inline-block; padding: 0px 0px 0px 10px;"
            />
          </span>
          <div
            class="pushed-content object-container"
          >
            <div
              class="object-content"
              style="margin-left: 6px;"
            >
              <div
                class="object-key-val"
                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
              >
                <span>
                  <span
                    style="display: inline-block; cursor: pointer;"
                  >
                    <div
                      class="icon-container"
                      style="display: inline-block; width: 17px;"
                    >
                      <span
                        class="expanded-icon"
                      >
                        <svg
                          fill="currentColor"
                          style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                          viewBox="0 0 15 15"
                        >
                          <path
                            d="M0 5l6 6 6-6z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                    >
                      <span
                        class="object-key"
                      >
                        <span
                          style="vertical-align: top;"
                        >
                          "
                        </span>
                        <span>
                          foo
                        </span>
                        <span
                          style="vertical-align: top;"
                        >
                          "
                        </span>
                      </span>
                      <span
                        style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                      >
                        :
                      </span>
                    </span>
                    <span
                      style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                    >
                      {
                    </span>
                  </span>
                  <div
                    class="object-meta-data"
                    style="display: inline-block; padding: 0px 0px 0px 10px;"
                  />
                </span>
                <div
                  class="pushed-content object-container"
                  style=""
                >
                  <div
                    class="object-content"
                    style="margin-left: 6px;"
                  >
                    <div
                      class="object-key-val"
                      style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                    >
                      <span>
                        <span
                          style="display: inline-block; cursor: pointer;"
                        >
                          <div
                            class="icon-container"
                            style="display: inline-block; width: 17px;"
                          >
                            <span
                              class="expanded-icon"
                            >
                              <svg
                                fill="currentColor"
                                style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                                viewBox="0 0 15 15"
                              >
                                <path
                                  d="M0 5l6 6 6-6z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                          >
                            <span
                              class="object-key"
                            >
                              <span
                                style="vertical-align: top;"
                              >
                                "
                              </span>
                              <span>
                                bar
                              </span>
                              <span
                                style="vertical-align: top;"
                              >
                                "
                              </span>
                            </span>
                            <span
                              style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                            >
                              :
                            </span>
                          </span>
                          <span
                            style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                          >
                            {
                          </span>
                        </span>
                        <div
                          class="object-meta-data"
                          style="display: inline-block; padding: 0px 0px 0px 10px;"
                        />
                      </span>
                      <div
                        class="pushed-content object-container"
                      >
                        <div
                          class="object-content"
                          style="margin-left: 6px;"
                        >
                          <div
                            class="variable-row"
                            style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                          >
                            <span>
                              <span
                                class="object-key"
                                style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                              >
                                <span
                                  style="vertical-align: top;"
                                >
                                  "
                                </span>
                                <span
                                  style="display: inline-block;"
                                >
                                  lorem
                                </span>
                                <span
                                  style="vertical-align: top;"
                                >
                                  "
                                </span>
                              </span>
                              <span
                                style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                              >
                                :
                              </span>
                            </span>
                            <div
                              class="variable-value"
                              style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                            >
                              <div
                                style="display: inline-block; color: rgb(203, 75, 22);"
                              >
                                <span
                                  class="string-value"
                                  style="cursor: default;"
                                >
                                  "
                                  ipsum
                                  "
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        class="brace-row"
                      >
                        <span
                          style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                        >
                          }
                        </span>
                      </span>
                    </div>
                    <div
                      class="object-key-val"
                      style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                    >
                      <span>
                        <span
                          style="display: inline-block; cursor: pointer;"
                        >
                          <div
                            class="icon-container"
                            style="display: inline-block; width: 17px;"
                          >
                            <span
                              class="expanded-icon"
                            >
                              <svg
                                fill="currentColor"
                                style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                                viewBox="0 0 15 15"
                              >
                                <path
                                  d="M0 5l6 6 6-6z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                          >
                            <span
                              class="object-key"
                            >
                              <span
                                style="vertical-align: top;"
                              >
                                "
                              </span>
                              <span>
                                something
                              </span>
                              <span
                                style="vertical-align: top;"
                              >
                                "
                              </span>
                            </span>
                            <span
                              style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                            >
                              :
                            </span>
                          </span>
                          <span
                            style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                          >
                            {
                          </span>
                        </span>
                        <div
                          class="object-meta-data"
                          style="display: inline-block; padding: 0px 0px 0px 10px;"
                        />
                      </span>
                      <div
                        class="pushed-content object-container"
                      >
                        <div
                          class="object-content"
                          style="margin-left: 6px;"
                        >
                          <div
                            class="object-key-val"
                            style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                          >
                            <span>
                              <span
                                style="display: inline-block; cursor: pointer;"
                              >
                                <div
                                  class="icon-container"
                                  style="display: inline-block; width: 17px;"
                                >
                                  <span
                                    class="expanded-icon"
                                  >
                                    <svg
                                      fill="currentColor"
                                      style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                                      viewBox="0 0 15 15"
                                    >
                                      <path
                                        d="M0 5l6 6 6-6z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                                <span
                                  style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                >
                                  <span
                                    class="object-key"
                                  >
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                    <span>
                                      else
                                    </span>
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                  </span>
                                  <span
                                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                  >
                                    :
                                  </span>
                                </span>
                                <span
                                  style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                                >
                                  {
                                </span>
                              </span>
                              <div
                                class="object-meta-data"
                                style="display: inline-block; padding: 0px 0px 0px 10px;"
                              />
                            </span>
                            <div
                              class="pushed-content object-container"
                            >
                              <div
                                class="object-content"
                                style="margin-left: 6px;"
                              >
                                <div
                                  class="object-key-val"
                                  style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                                >
                                  <span>
                                    <span
                                      style="display: inline-block; cursor: pointer;"
                                    >
                                      <div
                                        class="icon-container"
                                        style="display: inline-block; width: 17px;"
                                      >
                                        <span
                                          class="expanded-icon"
                                        >
                                          <svg
                                            fill="currentColor"
                                            style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                                            viewBox="0 0 15 15"
                                          >
                                            <path
                                              d="M0 5l6 6 6-6z"
                                            />
                                          </svg>
                                        </span>
                                      </div>
                                      <span
                                        style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                      >
                                        <span
                                          class="object-key"
                                        >
                                          <span
                                            style="vertical-align: top;"
                                          >
                                            "
                                          </span>
                                          <span>
                                            else
                                          </span>
                                          <span
                                            style="vertical-align: top;"
                                          >
                                            "
                                          </span>
                                        </span>
                                        <span
                                          style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                        >
                                          :
                                        </span>
                                      </span>
                                      <span
                                        style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                                      >
                                        {
                                      </span>
                                    </span>
                                    <div
                                      class="object-meta-data"
                                      style="display: inline-block; padding: 0px 0px 0px 10px;"
                                    />
                                  </span>
                                  <div
                                    class="pushed-content object-container"
                                  >
                                    <div
                                      class="object-content"
                                      style="margin-left: 6px;"
                                    >
                                      <div
                                        class="variable-row"
                                        style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                                      >
                                        <span>
                                          <span
                                            class="object-key"
                                            style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                          >
                                            <span
                                              style="vertical-align: top;"
                                            >
                                              "
                                            </span>
                                            <span
                                              style="display: inline-block;"
                                            >
                                              else
                                            </span>
                                            <span
                                              style="vertical-align: top;"
                                            >
                                              "
                                            </span>
                                          </span>
                                          <span
                                            style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                          >
                                            :
                                          </span>
                                        </span>
                                        <div
                                          class="variable-value"
                                          style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                        >
                                          <div
                                            style="display: inline-block; color: rgb(203, 75, 22);"
                                          >
                                            <span
                                              class="string-value"
                                              style="cursor: default;"
                                            >
                                              "
                                              example
                                              "
                                            </span>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                  <span
                                    class="brace-row"
                                  >
                                    <span
                                      style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                                    >
                                      }
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                            <span
                              class="brace-row"
                            >
                              <span
                                style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                              >
                                }
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="brace-row"
                      >
                        <span
                          style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                        >
                          }
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="brace-row"
                >
                  <span
                    style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                  >
                    }
                  </span>
                </span>
              </div>
            </div>
          </div>
          <span
            class="brace-row"
          >
            <span
              style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
            >
              }
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 10px; right: 10px; display: grid; grid-auto-flow: column;"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Copy
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Collapse
      </span>
    </button>
  </div>
</div>
`;

exports[`JsonViewer Expand - Collapse button is collapsed as default 1`] = `
<div
  style="position: relative;"
>
  <div
    class="react-json-view"
    style="font-family: monospace; cursor: default; background-color: rgb(237, 237, 237); position: relative; padding: 20px 10px; font-size: 12px; overflow: visible; white-space: pre-wrap; word-break: break-all;"
  >
    <div
      class="pretty-json-container object-container"
    >
      <div
        class="object-content"
      >
        <div
          class="object-key-val"
        >
          <span>
            <span
              style="display: inline-block; cursor: pointer;"
            >
              <div
                class="icon-container"
                style="display: inline-block; width: 17px;"
              >
                <span
                  class="expanded-icon"
                >
                  <svg
                    fill="currentColor"
                    style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                    viewBox="0 0 15 15"
                  >
                    <path
                      d="M0 5l6 6 6-6z"
                    />
                  </svg>
                </span>
              </div>
              <span />
              <span
                style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
              >
                {
              </span>
            </span>
            <div
              class="object-meta-data"
              style="display: inline-block; padding: 0px 0px 0px 10px;"
            />
          </span>
          <div
            class="pushed-content object-container"
          >
            <div
              class="object-content"
              style="margin-left: 6px;"
            >
              <div
                class="object-key-val"
                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
              >
                <span>
                  <span
                    style="display: inline-block; cursor: pointer;"
                  >
                    <div
                      class="icon-container"
                      style="display: inline-block; width: 17px;"
                    >
                      <span
                        class="collapsed-icon"
                      >
                        <svg
                          fill="currentColor"
                          style="vertical-align: top; color: rgb(42, 161, 152); height: 1em; width: 1em; padding-left: 2px;"
                          viewBox="0 0 15 15"
                        >
                          <path
                            d="M0 14l6-6-6-6z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span
                      style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                    >
                      <span
                        class="object-key"
                      >
                        <span
                          style="vertical-align: top;"
                        >
                          "
                        </span>
                        <span>
                          foo
                        </span>
                        <span
                          style="vertical-align: top;"
                        >
                          "
                        </span>
                      </span>
                      <span
                        style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                      >
                        :
                      </span>
                    </span>
                    <span
                      style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                    >
                      {
                    </span>
                  </span>
                </span>
                <div
                  class="node-ellipsis"
                  style="display: inline-block; color: rgb(203, 75, 22); font-size: 18px; line-height: 10px; cursor: pointer;"
                >
                  ...
                </div>
                <span
                  class="brace-row"
                >
                  <span
                    style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 0px;"
                  >
                    }
                  </span>
                  <div
                    class="object-meta-data"
                    style="display: inline-block; padding: 0px 0px 0px 10px;"
                  />
                </span>
              </div>
            </div>
          </div>
          <span
            class="brace-row"
          >
            <span
              style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
            >
              }
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 10px; right: 10px; display: grid; grid-auto-flow: column;"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Copy
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Expand all
      </span>
    </button>
  </div>
</div>
`;

exports[`JsonViewer if schema is defined renders ReactJson 1`] = `
<div
  style="position: relative;"
>
  <div
    class="react-json-view"
    style="font-family: monospace; cursor: default; background-color: rgb(237, 237, 237); position: relative; padding: 20px 10px; font-size: 12px; overflow: visible; white-space: pre-wrap; word-break: break-all;"
  >
    <div
      class="pretty-json-container object-container"
    >
      <div
        class="object-content"
      >
        <div
          class="object-key-val"
        >
          <span>
            <span
              style="display: inline-block; cursor: pointer;"
            >
              <div
                class="icon-container"
                style="display: inline-block; width: 17px;"
              >
                <span
                  class="expanded-icon"
                >
                  <svg
                    fill="currentColor"
                    style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                    viewBox="0 0 15 15"
                  >
                    <path
                      d="M0 5l6 6 6-6z"
                    />
                  </svg>
                </span>
              </div>
              <span />
              <span
                style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
              >
                {
              </span>
            </span>
            <div
              class="object-meta-data"
              style="display: inline-block; padding: 0px 0px 0px 10px;"
            />
          </span>
          <div
            class="pushed-content object-container"
          >
            <div
              class="object-content"
              style="margin-left: 6px;"
            >
              <div
                class="variable-row"
                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
              >
                <span>
                  <span
                    class="object-key"
                    style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                  >
                    <span
                      style="vertical-align: top;"
                    >
                      "
                    </span>
                    <span
                      style="display: inline-block;"
                    >
                      foo
                    </span>
                    <span
                      style="vertical-align: top;"
                    >
                      "
                    </span>
                  </span>
                  <span
                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                  >
                    :
                  </span>
                </span>
                <div
                  class="variable-value"
                  style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                >
                  <div
                    style="display: inline-block; color: rgb(203, 75, 22);"
                  >
                    <span
                      class="string-value"
                      style="cursor: default;"
                    >
                      "
                      bar
                      "
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="brace-row"
          >
            <span
              style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
            >
              }
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 10px; right: 10px; display: grid; grid-auto-flow: column;"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Copy
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Expand all
      </span>
    </button>
  </div>
</div>
`;
